--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6); /* escurece o fundo */
+    background: rgba(0, 0, 0, 0.6);
     z-index: 0;
 }
 
@@ -88,10 +88,11 @@ button:hover {
     margin-bottom: 10px;
     text-align: center;
 }
-/* Estilo para a logo */
+
 .logo {
     max-width: 250px;
     display: block;
     margin: 0 auto 20px;
 }
+
 
